--- a/index.html
+++ b/index.html
@@ -14,16 +14,153 @@
   </head>
   <body>
     <!-- Navbar-->
-    <nav></nav>
+    <nav class="navbar navbar-light">
+      <a class="navbar-brand" href="#"><h2>Art Gallery</h2></a>   
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn my-2 my-sm-0" type="submit"><span class="icon-search"></span></button>
+      </form>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="nav-item nav-link" href="#">Pricing</a>
+          <a class="nav-item nav-link disabled" href="#">Disabled</a>
+        </div>
+      </div>
+    </nav>
     <!-- Sections -->
-  
-    <section id="news"><h1>News & Events</h1></section>
-    <section id="channel"><h1>Channel</h1></section>
-    <section id="artists"><h1>Artists</h1></section>
+    <!-- Banner -->
+    <section id="banner" class="container">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/img/banner.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-success">Description Text</h5>
+              <p class="text-success">more text</p>
+            </div> 
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/img/banner.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-success">2nd Description Text</h5>
+              <p class="text-success">2nd more text</p>
+            </div> 
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/img/banner.jpg" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-success">3rd Description Text</h5>
+              <p class="text-success">3rd more text</p>
+            </div> 
+          </div>
+          
+        </div>
+      </div>
+    </section>
+    <!-- News and Events -->
+    <section class="container">
+      <h2>News & Events</h2>
+      <div class="news-container">
+        <div class="news-card">
+          <img src="/img/news1.jpg" alt="">
+          <p><strong>Exhibition: He Xiangyu monograph 
+            released by Distanz</strong><br>
+            From March 2016<br>
+            He Xiangyu and Liu Wei are 
+            among 74 international artists 
+            from 33 countries chosen to 
+            feature in the Yinchuan Biennale 
+            2016</p> 
+        </div>
+        <div class="news-card">
+          <img src="/img/news2.jpg" alt="">
+          <p><strong>Exhibition: Runa Islam at 
+            SFMOMA, San Francisco</strong><br>
+            From March 2016<br>
+            Verso’, SFMOMA’s solo 
+            presentation of Bangladeshi-born 
+            British artist Runa Islam, 
+            features the US premiere of 
+            Cabinet of Prototypes (2009-10)</p>
+        </div>
+        <div class="news-card">
+          <img src="/img/news3.jpg" alt="">
+          <p><strong>Preview: White Cube Mason’s 
+            Yard</strong><br>
+            19 January 2017, 6 to 8pm<br>
+            Join us at Mason's Yard, London 
+            for the preview of the new Park 
+            Seo-Bo exhibition curated by 
+            Katharine Kostyál. Curated by 
+            Katharine Kostyál</p>          
+        </div>
+      </div>
+    </section>
+    <!-- Channel -->
+    <section class="channel container">
+      <h2>Channel</h2>
+      <img src="/img/youtube-placeholder.jpg" alt="">
+
+    </section>
+    <!-- Artists-->
+    <section class="artists container">
+      <h2>Artists</h2>
+    
+    </section>
 
 
-    <!-- Footer-->
-    <footer></footer>
+
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-dark text-white">
+      <!-- Section: Links and Social media -->
+      <section class="container d-flex justify-content-center justify-content-lg-between py-3 border-bottom">
+        <!-- Left -->
+        <div class="d-flex">
+          <h5><a href="#!" class="text-reset ">Newsletter</a></h5>
+          <h5><a href="#!" class="text-reset">Contact</a></h5>
+          <h5><a href="#!" class="text-reset">Press Room</a></h5>
+        </div>
+
+        <!-- Right -->
+        <div class="d-flex">
+          <a href="" class="me-4 link-secondary">
+            <span class="icon-facebook"></span>
+          </a>
+          <a href="" class="me-4 link-secondary">
+            <span class="icon-twitter"></span>
+          </a>
+        </div>
+      </section>
+
+      <!-- Footer: Contact -->
+      <section class="">
+        <div class="container mt-5 border-bottom">
+          <div class="row mt-3">
+            <div class="">
+              <h5 class="mb-4">ART GALLERY</h5>
+              <p>38-40 Southwark Street</p>
+              <p>London SE1 2UN</p>
+              <p>Telephone +44 20 74905337</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Copyright -->
+      <div class="p-4">© 2022 EC1 GALLERY</div>
+
+
+    </footer>
 
     <!-- Script -->
     <script src="script.js"></script>
