add artists content (hard-coded) with bootstrap media variation

--- a/index.html
+++ b/index.html
@@ -115,7 +115,70 @@
     <!-- Artists-->
     <section class="artists container">
       <h2>Artists</h2>
-    
+
+      <div class="row">
+        <div class="col-md-3 col-sm-12">
+          <p><a href="#!" class="text-reset">Franz Ackermann</a></p>
+          <p><a href="#!" class="text-reset">Etel Adnan</a></p>
+          <p><a href="#!" class="text-reset">Darren Almond</a></p>
+          <p><a href="#!" class="text-reset">Ellen Altfest</a></p>
+          <p><a href="#!" class="text-reset">Michael Armitage</a></p>
+          <p><a href="#!" class="text-reset">Miroslaw Balka</a></p>
+          <p><a href="#!" class="text-reset">Georg Baselitz</a></p>
+          <p><a href="#!" class="text-reset">Larry Bell</a></p>
+          <p><a href="#!" class="text-reset">Jake & Dinos Chapman</a></p>
+          <p><a href="#!" class="text-reset">Chuck Close</a></p>
+          <p><a href="#!" class="text-reset">Gregory Crewdson</a></p>
+          <p><a href="#!" class="text-reset">Tracey Emin</a></p>
+          <p><a href="#!" class="text-reset">Katharina Fritsch</a></p>
+          <p><a href="#!" class="text-reset">Theaster Gates</a></p>
+          <p><a href="#!" class="text-reset">Gilbert & George</a></p>
+          <p><a href="#!" class="text-reset">Antony Gormley</a></p>
+          <p><a href="#!" class="text-reset">Andreas Gursky</a></p>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <p><a href="#!" class="text-reset">David Hammons</a></p>
+          <p><a href="#!" class="text-reset">Mona Hatoum</a></p>
+          <p><a href="#!" class="text-reset">He Xiangyu</a></p>
+          <p><a href="#!" class="text-reset">Damien Hirst</a></p>
+          <p><a href="#!" class="text-reset">Robert Irwin</a></p>
+          <p><a href="#!" class="text-reset">Runa Islam</a></p>
+          <p><a href="#!" class="text-reset">Sergej Jensen</a></p>
+          <p><a href="#!" class="text-reset">Anselm Kiefer</a></p>
+          <p><a href="#!" class="text-reset">Rachel Kneebone</a></p>
+          <p><a href="#!" class="text-reset">Imi Knoebel</a></p>
+          <p><a href="#!" class="text-reset">Elad Lassry</a></p>
+          <p><a href="#!" class="text-reset">Jac Leirner</a></p>
+          <p><a href="#!" class="text-reset">Jac Leirner</a></p>
+          <p><a href="#!" class="text-reset">Liu Wei</a></p>
+          <p><a href="#!" class="text-reset">Christian Marclay</a></p>
+          <p><a href="#!" class="text-reset">Josiah McElheny</a></p>
+          <p><a href="#!" class="text-reset">Julie Mehretu</a></p>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <p><a href="#!" class="text-reset">Beatriz Milhazes</a></p>
+          <p><a href="#!" class="text-reset">Harland Miller</a></p>
+          <p><a href="#!" class="text-reset">Sarah Morris</a></p>
+          <p><a href="#!" class="text-reset">Gabriel Orozco</a></p>
+          <p><a href="#!" class="text-reset">Damián Ortega</a></p>
+          <p><a href="#!" class="text-reset">Virginia Overton</a></p>
+          <p><a href="#!" class="text-reset">Eddie Peake</a></p>
+          <p><a href="#!" class="text-reset">Magnus Plessen</a></p>
+          <p><a href="#!" class="text-reset">Jessica Rankin </a></p>
+          <p><a href="#!" class="text-reset">Christian Rosa</a></p>
+          <p><a href="#!" class="text-reset">Doris Salcedo</a></p>
+          <p><a href="#!" class="text-reset">Raqib Shaw</a></p>
+          <p><a href="#!" class="text-reset">Haim Steinbach</a></p>
+          <p><a href="#!" class="text-reset">Sam Taylor-Johnson</a></p>
+          <p><a href="#!" class="text-reset">Fred Tomaselli</a></p>
+          <p><a href="#!" class="text-reset">Jeff Wall</a></p>
+          <p><a href="#!" class="text-reset">Cerith Wyn Evans</a></p>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <img src="/img/artist.jpg" alt="">
+        </div>
+      </div>  
+    </div>
     </section>
 
 
