--- a/index.html
+++ b/index.html
@@ -36,48 +36,48 @@
     <!-- Sections -->
     <!-- Banner -->
     <section id="banner" class="container">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleIndicators " class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="mx-2 active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1" class="mx-2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2" class="mx-2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3" class="mx-2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4" class="mx-2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="/img/banner.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-success">Description Text</h5>
-              <p class="text-success">more text</p>
+              <h5 class="m-0"><strong>Description Text</strong></h5>
+              <p class="mt-1">more text</p>
             </div> 
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/img/banner.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-success">2nd Description Text</h5>
-              <p class="text-success">2nd more text</p>
+              <h5 class="m-0"><strong>2nd Description Text</strong></h5>
+              <p class=mt-1">2nd more text</p>
             </div> 
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/img/banner.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-success">3rd Description Text</h5>
-              <p class="text-success">3rd more text</p>
+              <h5 class="m-0">3rd Description Text</h5>
+              <p class="mt-1">3rd more text</p>
             </div> 
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/img/banner.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-success">4th Description Text</h5>
-              <p class="text-success">4th more text</p>
+              <h5 class="m-0">4th Description Text</h5>
+              <p class="mt-1">4th more text</p>
             </div> 
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/img/banner.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-success">5th Description Text</h5>
-              <p class="text-success">5th more text</p>
+              <h5 class="m-0">5th Description Text</h5>
+              <p class="mt-1">5th more text</p>
             </div> 
           </div>
           
@@ -85,47 +85,52 @@
       </div>
     </section>
     <!-- News and Events -->
-    <section class="container">
-      <h2>News & Events</h2>
-      <div class="news-container">
-        <div class="news-card">
+    <section class="container mt-5 border-top p-0">
+      <div class="d-flex justify-content-between">
+        <h4 class="mt-3"><strong>News & Events</strong></h4> 
+        <a class="d-flex text-reset" href="#">
+          <h4 class="mt-3">View all</h4>
+          <img class="icon-arrow mt-2 ml-2" src="icons/arrow-forward-outline.svg" alt="">
+        </a>
+      </div>
+      <div class="news-container mt-1">
+        <div class="news-card" data-aos="fade-right" data-aos-delay="100">
           <img src="/img/news1.jpg" alt="">
-          <p><strong>Exhibition: He Xiangyu monograph 
-            released by Distanz</strong><br>
-            From March 2016<br>
-            He Xiangyu and Liu Wei are 
-            among 74 international artists 
+          <p class="my-2"><strong>Exhibition: He Xiangyu monograph released by Distanz</strong></p> 
+          <p class="m-0">From March 2016</p>
+          <p class="mt-2">He Xiangyu and Liu Wei are 
+            among 75 international artists 
             from 33 countries chosen to 
             feature in the Yinchuan Biennale 
             2016</p> 
         </div>
-        <div class="news-card">
+        <div class="news-card" data-aos="fade-right" data-aos-delay="400">
           <img src="/img/news2.jpg" alt="">
-          <p><strong>Exhibition: Runa Islam at 
-            SFMOMA, San Francisco</strong><br>
-            From March 2016<br>
-            Verso’, SFMOMA’s solo 
+          <p class="my-2"><strong>Exhibition: Runa Islam at 
+            SFMOMA, San Francisco</strong></p>
+          <p class="m-0">From March 2016</p>
+          <p class="mt-2">Verso’, SFMOMA’s solo 
             presentation of Bangladeshi-born 
             British artist Runa Islam, 
             features the US premiere of 
             Cabinet of Prototypes (2009-10)</p>
         </div>
-        <div class="news-card">
+        <div class="news-card" data-aos="fade-right" data-aos-delay="700">
           <img src="/img/news3.jpg" alt="">
-          <p><strong>Preview: White Cube Mason’s 
-            Yard</strong><br>
-            19 January 2017, 6 to 8pm<br>
-            Join us at Mason's Yard, London 
+          <p class="my-2"><strong>Preview: White Cube Mason’s 
+            Yard</strong></p>
+          <p class="m-0">19 January 2017, 6 to 8pm</p>
+          <p class="mt-2">Join us at Mason's Yard, London 
             for the preview of the new Park 
             Seo-Bo exhibition curated by 
             Katharine Kostyál. Curated by 
-            Katharine Kostyál</p>          
+            Katharine Kostyál</p>         
         </div>
       </div>
     </section>
     <!-- Channel -->
-    <section class="channel container">
-      <h2>Channel</h2>
+    <section class="channel container mt-4 p-0 border-top">
+      <h4 class="mt-3"><strong>Channel</strong></h4>
       <img src="/img/youtube-placeholder.jpg" alt="">
 
     </section>
@@ -206,7 +211,7 @@
       <section class="container d-flex justify-content-center justify-content-lg-between py-3 border-bottom">
         <!-- Left -->
         <div class="d-flex">
-          <h5><a href="#!" class="text-reset ">Newsletter</a></h5>
+          <h5><a href="#!" class="text-reset">Newsletter</a></h5>
           <h5><a href="#!" class="text-reset">Contact</a></h5>
           <h5><a href="#!" class="text-reset">Press Room</a></h5>
         </div>
