--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div class="news-container mt-1">
         <div class="news-card" data-aos="fade-right" data-aos-delay="100">
-          <img src="/img/news1.jpg" alt="">
+          <img src="/img/news1.jpg" alt="" >
           <p class="my-2"><strong>Exhibition: He Xiangyu monograph released by Distanz</strong></p> 
           <p class="m-0">From March 2016</p>
           <p class="mt-2">He Xiangyu and Liu Wei are 
@@ -130,15 +130,24 @@
     </section>
     <!-- Channel -->
     <section class="channel container mt-4 p-0 border-top">
-      <h4 class="mt-3"><strong>Channel</strong></h4>
-      <img src="/img/youtube-placeholder.jpg" alt="">
+      <div data-aos="fade-rin" data-aos-delay="100">
+        <h4 class="mt-3"><strong>Channel</strong></h4>
+        <img src="/img/youtube-placeholder.jpg" alt="">
+        <div class="video-caption mt-2 row">
+          <p class="col"><strong>Anselm Kiefer in conversation with Tim Marlow in 
+            the Auditorium</strong></p>
+          <p class="col">In this film Anselm Kiefer discusses his work and 
+            his exhibition ‘Walhalla’ at White Cube Bermondsey 
+            with Tim Marlow</p>
+        </div>
+      </div>
 
     </section>
     <!-- Artists-->
-    <section class="artists container">
-      <h2>Artists</h2>
-
-      <div class="row">
+    <section class="artists container mt-5 border-top p-0">
+      <h4 class="my-3"><strong>Artists</strong></h4>
+      
+      <div class="row ">
         <div class="col-md-3 col-sm-12">
           <p><a href="#!" class="text-reset">Franz Ackermann</a></p>
           <p><a href="#!" class="text-reset">Etel Adnan</a></p>
@@ -206,7 +215,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-dark text-white">
+    <footer class="text-center text-lg-start bg-dark text-white mt-5">
       <!-- Section: Links and Social media -->
       <section class="container d-flex justify-content-center justify-content-lg-between py-3 border-bottom">
         <!-- Left -->
