footer spacing and alignment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Navbar-->
-    <nav class="container navbar navbar-light">
+    <nav class="container navbar navbar-light p-0 my-2">
       <a class="navbar-brand" href="#"><h2>Art Gallery</h2></a>
       <div class="d-flex">
         <form class="form-inline my-2 my-lg-0">
@@ -35,7 +35,7 @@
     </nav>
     <!-- Sections -->
     <!-- Banner -->
-    <section id="banner" class="container">
+    <section id="banner" class="container p-0">
       <div id="carouselExampleIndicators " class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="mx-2 active"></li>
@@ -215,22 +215,22 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-dark text-white mt-5">
+    <footer class="text-lg-start bg-dark text-white mt-5 p-0">
       <!-- Section: Links and Social media -->
-      <section class="container d-flex justify-content-center justify-content-lg-between py-3 border-bottom">
+      <section class="container d-flex justify-content-center justify-content-lg-between py-3 px-0 border-bottom">
         <!-- Left -->
         <div class="d-flex">
-          <h5><a href="#!" class="text-reset">Newsletter</a></h5>
-          <h5><a href="#!" class="text-reset">Contact</a></h5>
-          <h5><a href="#!" class="text-reset">Press Room</a></h5>
+          <h5><a href="#!" class="text-reset mr-3"><strong>Newsletter</strong></a></h5>
+          <h5><a href="#!" class="text-reset mr-3"><strong>Contact</strong></a></h5>
+          <h5><a href="#!" class="text-reset mr-3"><strong>Press Room</strong></a></h5>
         </div>
 
         <!-- Right -->
         <div class="d-flex">
-          <a href="" class="me-4 link-secondary">
+          <a href="" class="link-secondary">
             <span class="icon-facebook"></span>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a href="" class="ml-3 link-secondary">
             <span class="icon-twitter"></span>
           </a>
         </div>
@@ -238,7 +238,7 @@
 
       <!-- Footer: Contact -->
       <section class="">
-        <div class="container mt-5 border-bottom">
+        <div class="container mt-1 border-bottom">
           <div class="row mt-3">
             <div class="">
               <h5 class="mb-4">ART GALLERY</h5>
@@ -251,7 +251,9 @@
       </section>
 
       <!-- Copyright -->
-      <div class="p-4">© 2022 EC1 GALLERY</div>
+      <div class="p-0 my-4 container">
+        <p class="copyright">© 2022 EC1 GALLERY</p>
+      </div>
 
 
     </footer>
