display image when mouver hover artist name

--- a/index.html
+++ b/index.html
@@ -140,64 +140,64 @@
       <h4 class="my-3"><strong>Artists</strong></h4>
       <div class="row">
         <div class="col-md-3 col-sm-12 artists-names">
-          <p><a href="#!" class="text-reset">Franz Ackermann</a></p>
-          <p><a href="#!" class="text-reset">Etel Adnan</a></p>
-          <p><a href="#!" class="text-reset">Darren Almond</a></p>
-          <p><a href="#!" class="text-reset">Ellen Altfest</a></p>
-          <p><a href="#!" class="text-reset">Michael Armitage</a></p>
-          <p><a href="#!" class="text-reset">Miroslaw Balka</a></p>
-          <p><a href="#!" class="text-reset">Georg Baselitz</a></p>
-          <p><a href="#!" class="text-reset">Larry Bell</a></p>
-          <p><a href="#!" class="text-reset">Jake & Dinos Chapman</a></p>
-          <p><a href="#!" class="text-reset">Chuck Close</a></p>
-          <p><a href="#!" class="text-reset">Gregory Crewdson</a></p>
-          <p><a href="#!" class="text-reset">Tracey Emin</a></p>
-          <p><a href="#!" class="text-reset">Katharina Fritsch</a></p>
-          <p><a href="#!" class="text-reset">Theaster Gates</a></p>
-          <p><a href="#!" class="text-reset">Gilbert & George</a></p>
-          <p><a href="#!" class="text-reset">Antony Gormley</a></p>
-          <p><a href="#!" class="text-reset">Andreas Gursky</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Franz Ackermann</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Etel Adnan</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Darren Almond</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Ellen Altfest</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Michael Armitage</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Miroslaw Balka</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Georg Baselitz</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Larry Bell</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Jake & Dinos Chapman</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Chuck Close</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Gregory Crewdson</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Tracey Emin</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Katharina Fritsch</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Theaster Gates</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Gilbert & George</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Antony Gormley</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Andreas Gursky</a></p>
+        </div>
+        <div class="col-md-3 col-sm-12 artists-names">
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">David Hammons</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Mona Hatoum</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">He Xiangyu</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Damien Hirst</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Robert Irwin</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Runa Islam</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Sergej Jensen</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Anselm Kiefer</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Rachel Kneebone</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Imi Knoebel</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Elad Lassry</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Jac Leirner</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Jac Leirner</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Liu Wei</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Christian Marclay</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Josiah McElheny</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Julie Mehretu</a></p>
+        </div>
+        <div class="col-md-3 col-sm-12 artists-names">
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Beatriz Milhazes</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Harland Miller</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Sarah Morris</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Gabriel Orozco</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Damián Ortega</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Virginia Overton</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Eddie Peake</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Magnus Plessen</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Jessica Rankin </a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Christian Rosa</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Doris Salcedo</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Raqib Shaw</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Haim Steinbach</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Sam Taylor-Johnson</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Fred Tomaselli</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Jeff Wall</a></p>
+          <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Cerith Wyn Evans</a></p>
         </div>
         <div class="col-md-3 col-sm-12">
-          <p><a href="#!" class="text-reset">David Hammons</a></p>
-          <p><a href="#!" class="text-reset">Mona Hatoum</a></p>
-          <p><a href="#!" class="text-reset">He Xiangyu</a></p>
-          <p><a href="#!" class="text-reset">Damien Hirst</a></p>
-          <p><a href="#!" class="text-reset">Robert Irwin</a></p>
-          <p><a href="#!" class="text-reset">Runa Islam</a></p>
-          <p><a href="#!" class="text-reset">Sergej Jensen</a></p>
-          <p><a href="#!" class="text-reset">Anselm Kiefer</a></p>
-          <p><a href="#!" class="text-reset">Rachel Kneebone</a></p>
-          <p><a href="#!" class="text-reset">Imi Knoebel</a></p>
-          <p><a href="#!" class="text-reset">Elad Lassry</a></p>
-          <p><a href="#!" class="text-reset">Jac Leirner</a></p>
-          <p><a href="#!" class="text-reset">Jac Leirner</a></p>
-          <p><a href="#!" class="text-reset">Liu Wei</a></p>
-          <p><a href="#!" class="text-reset">Christian Marclay</a></p>
-          <p><a href="#!" class="text-reset">Josiah McElheny</a></p>
-          <p><a href="#!" class="text-reset">Julie Mehretu</a></p>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <p><a href="#!" class="text-reset">Beatriz Milhazes</a></p>
-          <p><a href="#!" class="text-reset">Harland Miller</a></p>
-          <p><a href="#!" class="text-reset">Sarah Morris</a></p>
-          <p><a href="#!" class="text-reset">Gabriel Orozco</a></p>
-          <p><a href="#!" class="text-reset">Damián Ortega</a></p>
-          <p><a href="#!" class="text-reset">Virginia Overton</a></p>
-          <p><a href="#!" class="text-reset">Eddie Peake</a></p>
-          <p><a href="#!" class="text-reset">Magnus Plessen</a></p>
-          <p><a href="#!" class="text-reset">Jessica Rankin </a></p>
-          <p><a href="#!" class="text-reset">Christian Rosa</a></p>
-          <p><a href="#!" class="text-reset">Doris Salcedo</a></p>
-          <p><a href="#!" class="text-reset">Raqib Shaw</a></p>
-          <p><a href="#!" class="text-reset">Haim Steinbach</a></p>
-          <p><a href="#!" class="text-reset">Sam Taylor-Johnson</a></p>
-          <p><a href="#!" class="text-reset">Fred Tomaselli</a></p>
-          <p><a href="#!" class="text-reset">Jeff Wall</a></p>
-          <p><a href="#!" class="text-reset">Cerith Wyn Evans</a></p>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <img class="artists-images" src="/img/artist.jpg" alt="">
+          <img id="hidden-image" src="/img/artist.jpg" alt="">
         </div>
       </div>  
     </div>
@@ -208,7 +208,7 @@
     <!-- Footer -->
     <footer class="text-lg-start bg-dark text-white mt-5 p-0">
       <!-- Section: Links and Social media -->
-      <section class="container d-flex justify-content-center justify-content-lg-between py-3 px-0 border-bottom">
+      <section class="container d-flex justify-content-between justify-content-lg-between py-3 px-0 border-bottom">
         <!-- Left -->
         <div class="d-flex">
           <h5><a href="#!" class="text-reset mr-3"><strong>Newsletter</strong></a></h5>
