toggle search input box when clicking search icon

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <a class="navbar-brand" href="#"><h2>Art Gallery</h2></a>
       <div class="d-flex">
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn my-2 my-sm-0" type="submit"><span class="icon-search"></span></button>
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-input">
+          <button class="btn my-2 my-sm-0" type="submit" onclick="displaySearch()"><span class="icon-search"></span></button>
         </form>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon mt-1"></span>
