media query added to support mobile view

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
           src="https://www.youtube.com/embed/FshvS5lwe4A">
         </iframe>
         <div class="video-caption mt-2 row">
-          <p class="col"><strong>Anselm Kiefer in conversation with Tim Marlow in 
+          <p class="col-12 col-sm-6"><strong>Anselm Kiefer in conversation with Tim Marlow in 
             the Auditorium</strong></p>
-          <p class="col">In this film Anselm Kiefer discusses his work and 
+          <p class="col-12 col-sm-6">In this film Anselm Kiefer discusses his work and 
             his exhibition ‘Walhalla’ at White Cube Bermondsey 
             with Tim Marlow</p>
         </div>
