style collapsing menu

--- a/index.html
+++ b/index.html
@@ -14,24 +14,31 @@
   </head>
   <body id="bootstrap-overrides">
     <!-- Navbar-->
-    <nav class="container navbar navbar-light p-0 my-2">
+    <nav class="container navbar navbar-light p-0"> 
       <a class="navbar-brand" href="#"><h2>Art Gallery</h2></a>
-      <div class="d-flex">
+      <div class="row">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-input">
           <button class="btn my-2 my-sm-0" type="submit" onclick="displaySearch()"><span class="icon-search"></span></button>
-        </form>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        </form> 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon mt-1"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse"  id="navbarTogglerDemo02">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Artists</a>
-            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link active border-bottom" href="#"><h2>Home</h2><span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link border-bottom" href="#"><h2>Art & Artists</h2></a>
+            <a class="nav-item nav-link border-bottom" href="#"><h2>Exhibitions</h2></a>
+            <a class="nav-item nav-link border-bottom" href="#"><h2>News</h2></a>
+            <a class="nav-item nav-link border-bottom" href="#"><h2>About</h2></a>
+            <a class="nav-item nav-link" href="#"><h2>Private area</h2></a>
           </div>
         </div>
       </div>
+
+      
+    </nav>
+
     </nav>
     <!-- Sections -->
     <!-- Banner -->
@@ -128,7 +135,7 @@
         <div class="video-caption mt-2 row">
           <p class="col-12 col-sm-6"><strong>Anselm Kiefer in conversation with Tim Marlow in 
             the Auditorium</strong></p>
-          <p class="col-12 col-sm-6">In this film Anselm Kiefer discusses his work and 
+          <p class="col-12 col-sm-">In this film Anselm Kiefer discusses his work and 
             his exhibition ‘Walhalla’ at White Cube Bermondsey 
             with Tim Marlow</p>
         </div>
