add prevent default to search bar script

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a class="text-reset" href="#"><h2>Art Gallery</h2></a>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-input" style="display:none;">
-        <button class="btn p-0 mb-2" type="submit" onclick="displaySearch()"><span class="icon-search"></span></button>
+        <button class="btn p-0 mb-2" type="submit" id="search-toggle"><span class="icon-search"></span></button>
       </form>
       <div class="menu-bars" id="menu-bars">
         <div class="bar1"></div>
