--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="news-container mt-1">
         <div class="news-card" data-aos="fade-right" data-aos-delay="100">
-          <img src="/img/news1.jpg" alt="" >
+          <img src="./img/news1.jpg" alt="" >
           <p class="my-2"><strong>Exhibition: He Xiangyu monograph released by Distanz</strong></p> 
           <p class="m-0">From March 2016</p>
           <p class="mt-2">He Xiangyu and Liu Wei are 
@@ -99,7 +99,7 @@
             2016</p> 
         </div>
         <div class="news-card" data-aos="fade-right" data-aos-delay="400">
-          <img src="/img/news2.jpg" alt="">
+          <img src="./img/news2.jpg" alt="">
           <p class="my-2"><strong>Exhibition: Runa Islam at 
             SFMOMA, San Francisco</strong></p>
           <p class="m-0">From March 2016</p>
@@ -110,7 +110,7 @@
             Cabinet of Prototypes (2009-10)</p>
         </div>
         <div class="news-card" data-aos="fade-right" data-aos-delay="700">
-          <img src="/img/news3.jpg" alt="">
+          <img src="./img/news3.jpg" alt="">
           <p class="my-2"><strong>Preview: White Cube Mason’s 
             Yard</strong></p>
           <p class="m-0">19 January 2017, 6 to 8pm</p>
@@ -201,7 +201,7 @@
           <p><a href="#!" class="text-reset" onMouseOver="show('hidden-image')" onMouseOut="hide('hidden-image')">Cerith Wyn Evans</a></p>
         </div>
         <div class="col-md-3 col-sm-12">
-          <img id="hidden-image" src="/img/artist.jpg" alt="">
+          <img id="hidden-image" src="./img/artist.jpg" alt="">
         </div>
       </div>  
     </div>
